Refactor the tests for averageAgeOfAdults and countConfirmed to make them immutable and independent, Also added some descriptive test titles.
Coorect module type in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "milestone",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "milestone test for 2 TW weekers",
   "main": "filter-divisible.js",
